--- a/apps/src/components/Sidebar.astro
+++ b/apps/src/components/Sidebar.astro
@@ -24,34 +24,34 @@
             </li>
             <li class="mr-3 flex-1">
                 <a
-                    href="/database"
+                    href="/config"
                     class="block py-1 md:py-3 pl-1 align-middle text-white no-underline hover:text-white border-b-2 border-gray-800 hover:border-blue-600"
                 >
-                    <i class="fa fa-database pr-0 md:pr-3"></i><span
+                    <i class="fas fa-cog pr-0 md:pr-3"></i><span
                         class="pb-1 md:pb-0 text-xs md:text-base text-gray-600 md:text-gray-400 block md:inline-block"
-                        >Database</span
+                        >Config</span
                     >
                 </a>
             </li>
             <li class="mr-3 flex-1">
                 <a
-                    href="/analytics"
+                    href="/models"
                     class="block py-1 md:py-3 pl-1 align-middle text-white no-underline hover:text-white border-b-2 border-gray-800 hover:border-blue-600"
                 >
-                    <i class="fas fa-chart-area pr-0 md:pr-3"></i><span
+                    <i class="fas fa-table pr-0 md:pr-3"></i><span
                         class="pb-1 md:pb-0 text-xs md:text-base text-gray-600 md:text-gray-400 block md:inline-block"
-                        >Analytics</span
+                        >Models</span
                     >
                 </a>
             </li>
             <li class="mr-3 flex-1">
                 <a
-                    href="/payments"
+                    href="/generate"
                     class="block py-1 md:py-3 pl-0 md:pl-1 align-middle text-white no-underline hover:text-white border-b-2 border-gray-800 hover:border-blue-600"
                 >
-                    <i class="fa fa-wallet pr-0 md:pr-3"></i><span
+                    <i class="fas fa-download pr-0 md:pr-3"></i><span
                         class="pb-1 md:pb-0 text-xs md:text-base text-gray-600 md:text-gray-400 block md:inline-block"
-                        >Payments</span
+                        >Generate</span
                     >
                 </a>
             </li>
